Iniciando la conexión con la API de Unsplash

--- a/data/com.github.calo001.fondo.desktop
+++ b/data/com.github.calo001.fondo.desktop
@@ -6,5 +6,5 @@ Exec=com.github.calo001.fondo
 Terminal=false
 Type=Application
 StartupNotify=true
-Categories=GNOME;GTK;
-Keywords=app;vala;
+Categories=Utility;Accesories;
+Keywords=wallpaper;unsplash;foto;image;photo;
