--- a/meson.build
+++ b/meson.build
@@ -41,6 +41,7 @@ dependencies = [
     dependency('gtk+-3.0'),
     dependency('json-glib-1.0'),
     dependency('libsoup-2.4'),
+    dependency('json-glib-1.0'),
     dependency('gio-2.0')
 ]
 
