--- a/src/meson.build
+++ b/src/meson.build
@@ -6,11 +6,18 @@ sources += files(
 
     'views/AppView.vala',
     'views/CardPhotoView.vala',
+    'views/PreviewWindow.vala',
 
     'structs/Photo.vala',
 
+    'utils/DownloadImage.vala',
+    'utils/WallpaperSettings.vala',
+
     'widgets/HeaderBar.vala',
+    'widgets/ModeSwitch.vala',
     'services/Connection.vala',
+
+    'interfaces/WindowEvents.vala',
 
     'Application.vala',
     'Main.vala',
