--- a/data/com.github.calo001.fondo.desktop
+++ b/data/com.github.calo001.fondo.desktop
@@ -7,5 +7,5 @@ Terminal=false
 Type=Application
 StartupNotify=true
 Categories=Utility;Accesories;
-Keywords=wallpaper;unsplash;foto;image;photo;
+Keywords=wallpaper;unsplash;foto;image;photo;background;
 X-GNOME-UsesNotifications=true
