--- a/debian/control
+++ b/debian/control
@@ -15,4 +15,4 @@ Standards-Version: 3.9.3
 Package: com.github.calo001.fondo
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Description: 
+Description: Find the most beautiful wallpapers for your desktop.
